<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/nav_menu">
        <item android:id="@+id/menu_profile_info"
            android:icon="@drawable/user"
            android:title="@string/menu_profile_info"/>

        <item android:id="@+id/menu_booking"
            android:icon="@drawable/shopping_bag"
            android:title="@string/menu_my_booking"/>

        <item android:id="@+id/menu_voucher"
            android:icon="@drawable/coupon"
            android:title="@string/menu_my_voucher"/>

<!--        <item android:id="@+id/menu_support"-->
<!--            android:icon="@drawable/headphones"-->
<!--            android:title="@string/menu_customer_support"/>-->

<!--        <item android:id="@+id/menu_payment"-->
<!--            android:icon="@drawable/credit_card"-->
<!--            android:title="@string/menu_payment_method"/>-->

        <item android:id="@+id/menu_setting"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings"/>

        <item android:id="@+id/menu_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout"/>
    </group>
</menu>