<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainmenuActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="120dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/logo_2" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_1738"
            android:text="@string/sign_up"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/menu_text_color" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_1738"
            android:text="@string/login_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/menu_text_color" />

        <TextView
            android:id="@+id/tv_terms_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/terms_condition_text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_termsofservice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_1738"
            android:text="@string/terms_service_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/menu_text_color" />

        <Button
            android:id="@+id/btn_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_1738"
            android:text="@string/pricacy_policy_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/menu_text_color" />
    </LinearLayout>

</LinearLayout>