<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity"
    >

    <FrameLayout
        android:id="@+id/linear_layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_gradient"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_marginLeft="20dp"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/menu_text_color"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@color/design_default_color_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">

            <ImageView
                android:id="@+id/iv_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/group_287" />

            <EditText
                android:id="@+id/et_login_email"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/hint_email_txt"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="18sp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_login_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/group_287" />

            <EditText
                android:id="@+id/et_login_pw"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/hint_pw"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="18sp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/remember_me"
                android:textColor="@android:color/tertiary_text_dark" />

            <TextView
                android:id="@+id/tv_forgetpw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forget_pw"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">

            <ImageView
                android:id="@+id/iv_login_gs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/rectangle_1683" />

            <TextView
                android:id="@+id/tv_login_gs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/get_started"
                android:textColor="@color/menu_text_color"
                android:textSize="20sp" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/food_set" />
    </LinearLayout>

</LinearLayout>